--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@ breadcrumb: About Pingfu
 	<ul>
 		<li><a target="_blank" href="http://www.cassidian.com/web/guest/cybersecurity">Cassidian</a>, a division of EADS</li>
 		<li><a target="_blank" href="http://www.generaldynamics.uk.com/">General Dynamics</a> — on a protocol implementation of IODEF and RID RFCs</li>
-		<li><a target="_blank" href="http://www.westgatecyber.com/">WestGate Cyber Security</a> — Technical consultancy</li>
+		<li><a target="_blank" href="http://www.westgatecyber.com/">WestGate Cyber Security</a> — Technical consultant</li>
 	</ul>
 
 	<h2>Previously</h2>
