--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ title: Home — Pingfu
 	<div class="column3">
 		<div class="column">
 			<h2>About</h2>
-			<p>As a freelancer, Pingfu is a mash-up between work and play. I write, publish code, and a few <a href="tools">other things</a> here on occasion too.</p>
-			<p><a href="/about.html">More ›</a>
+			<p>As a freelancer, Pingfu is a mash-up between work and play. I write, publish code, and a few <a href="/tools">other things</a> here on occasion too.</p>
+			<p><a href="/about">More ›</a>
 		</div>
 	</div>
 
@@ -21,7 +21,7 @@ title: Home — Pingfu
 		<div class="column">
 			<h2>Open Source</h2>
 			<p>My small collection of open source projects and tools are <a href="/open-source">described here</a>, and published on <a href="https://github.com/pingfu">github</a>.</p>
-			<p><a href="open-source.html">More ›</a>
+			<p><a href="/open-source">More ›</a>
 		</div>
 	</div>
 
@@ -29,7 +29,7 @@ title: Home — Pingfu
 		<div class="column">
 			<h2>Blog</h2>
 			<p>"Snaplen, and other arguments" - a technical blog.<br />A collection of thoughts on programming, performance, technology and cyber.</p>
-			<p><a href="blog.html">More ›</a>
+			<p><a href="/blog">More ›</a>
 		</div>
 	</div>
 
