--- a/open-source.html
+++ b/open-source.html
@@ -14,7 +14,7 @@ breadcrumb: Open Source Projects
 
 	<h2>IIS Remove Server Headers</h2>
 	<p>A module for IIS which removes unwanted HTTP headers from a server response.</p>
-	<p><a href="/iis-remove-server-headers.html">Read More ›</a>
+	<p><a href="/iis-remove-server-headers">Read More ›</a>
 
 
 	<h2>Security Hardening Web.config</h2>
