--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ breadcrumb: About Pingfu
 		<li>Web technologies. Backend development and data storage to Javascript and HTML5 through to TLS and wire protocols, the whole stack.</li>
 		<li>PKCS implementation and validation.</li>
 		<li>Enterprise architectures upto IL3 in physical or cloud deployment (AWS, Azure and Rackspace).</li>
-		<li>Enterprise grade networking and storage (Cisco, Juniper, HP).</li>
+		<li>Enterprise grade networking and storage.</li>
 		<li>Security policy, assurance and accreditation. (ISO27001 &amp; PCI)</li>
 		<li>Security incident detection, response, handling and recovery.</li>
 		<li>Code review and analysis (C#), performance optimisation, and penetration testing.</li>
