--- a/tools.html
+++ b/tools.html
@@ -54,4 +54,24 @@ breadcrumb: Tools we've built
 		</li>
 	</ul>
 
+	<ul class="tools">
+		<li>
+			<p>
+				<a target="_blank" href="http://cesanta.com/"><strong>Mongoose</strong></a>
+				<br>
+				A powerful asyncronouns, non-blocking web server designed for use in embedded systems. Supports CGI, SSL, Digest auth, Websocket, WEbDAV, Resumed download, URL rewrite, file blacklist, IP-based ACL, and available as a <a href="https://github.com/cesanta/mongoose/blob/master/mongoose.c">single file</a>.
+			</p>
+		</li>
+	</ul>
+
+	<ul class="tools">
+		<li>
+			<p>
+				<a target="_blank" href="http://unix4lyfe.org/darkhttpd/"><strong>darkhttpd</strong></a>
+				<br>
+				Also available as a single file powerful asyncronouns, a simler feature set compared with Mongoose, but very useful <em>"when you need a web server in a hurry.."</em>
+			</p>
+		</li>
+	</ul>
+
 </section>
