--- a/tools.html
+++ b/tools.html
@@ -69,7 +69,7 @@ breadcrumb: Tools we've built
 			<p>
 				<a target="_blank" href="http://unix4lyfe.org/darkhttpd/"><strong>darkhttpd</strong></a>
 				<br>
-				Also available as a single file powerful asyncronouns, a simler feature set compared with Mongoose, but very useful <em>"when you need a web server in a hurry.."</em>
+				Also available as a single file - darkhttpd is has a simpler feature set compared to Mongoose, but very useful <em>"when you need a web server in a hurry.."</em>
 			</p>
 		</li>
 	</ul>
