--- a/tools.html
+++ b/tools.html
@@ -59,7 +59,7 @@ breadcrumb: Tools we've built
 			<p>
 				<a target="_blank" href="http://cesanta.com/"><strong>Mongoose</strong></a>
 				<br>
-				A powerful asyncronouns, non-blocking web server designed for use in embedded systems. Supports CGI, SSL, Digest auth, Websocket, WEbDAV, Resumed download, URL rewrite, file blacklist, IP-based ACL, and available as a <a href="https://github.com/cesanta/mongoose/blob/master/mongoose.c">single file</a>.
+				A powerful asyncronouns, non-blocking web server designed for use in embedded systems. Supports CGI, SSL, Digest auth, Websocket, WEbDAV, Resumed download, URL rewrite, file blacklist, IP-based ACL, and available as a <a target="_blank" href="https://github.com/cesanta/mongoose/blob/master/mongoose.c">single file</a>.
 			</p>
 		</li>
 	</ul>
