--- a/tools.html
+++ b/tools.html
@@ -32,7 +32,7 @@ breadcrumb: Tools we've built
 
 	<h1>Tools we like</h1>
 
-	<p></p>
+	<p>A few of the less well known, but exceptionally high quality tools I've had the pleasure of discovering.</p>
 
 	<ul class="tools">
 		<li>
@@ -59,7 +59,7 @@ breadcrumb: Tools we've built
 			<p>
 				<a target="_blank" href="http://cesanta.com/"><strong>Mongoose</strong></a>
 				<br>
-				A powerful asyncronouns, non-blocking web server designed for use in embedded systems. Supports CGI, SSL, Digest auth, Websocket, WEbDAV, Resumed download, URL rewrite, file blacklist, IP-based ACL, and available as a <a target="_blank" href="https://github.com/cesanta/mongoose/blob/master/mongoose.c">single file</a>.
+				A powerful asyncronouns, non-blocking web server designed for use in embedded systems. Supports CGI, SSL, Digest auth, Websocket, WebDAV, Resumed download, URL rewrite, file blacklist, IP-based ACL, and available as a <a target="_blank" href="https://github.com/cesanta/mongoose/blob/master/mongoose.c">single file</a>.
 			</p>
 		</li>
 	</ul>
@@ -69,7 +69,7 @@ breadcrumb: Tools we've built
 			<p>
 				<a target="_blank" href="http://unix4lyfe.org/darkhttpd/"><strong>darkhttpd</strong></a>
 				<br>
-				Also available as a single file - darkhttpd is has a simpler feature set compared to Mongoose, but very useful <em>"when you need a web server in a hurry.."</em>
+				Also available as a single file - darkhttpd has a simpler feature set compared to Mongoose, but very useful <em>"when you need a web server in a hurry.."</em>
 			</p>
 		</li>
 	</ul>
