--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Home — Pingfu
 
 
 
-		<div id="tabs-1">
+		<div id="tabs-1" class="tabbed-content">
 
 			<div class="column3">
 				<div class="column">
