--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home — Pingfu
 ---
 
-<section class="boxed large" id="api">
+<section class="boxed large">
 
 	<h1 class="text-align-center">Hi, I'm Marc, a computer security and infrastructure specialist.<br />Based in <a href="http://maps.google.co.uk/maps?q=Wales">Cardiff</a>, I work on all sorts of interesting things.</h1>
 
