--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home — Pingfu
 
 		<div id="tabs-1" class="tabbed-content">
 
-			<h1 class="text-align-center">Hi, I'm Marc, a computer security and infrastructure specialist.<br />Based in <a href="http://maps.google.co.uk/maps?q=Wales">Cardiff</a>, I work on all sorts of interesting things.</h1>
+			<h1 class="text-align-center">Hi, I'm Marc, a computer security and infrastructure specialist.<br />Based in <a href="http://maps.google.co.uk/maps?q=Cardiff">Cardiff</a>, I work on all sorts of interesting things.</h1>
 
 			<hr />
 
