--- a/open-source.html
+++ b/open-source.html
@@ -9,7 +9,7 @@ breadcrumb: Open Source Projects
 	<div class="breadcrumb"><a href="/">Pingfu</a> <span class="divider">›</span> {{ page.breadcrumb }}</div>
 
 	<h1>{{ page.breadcrumb }}</h1>
-	<p>Most of the work I release is written in C#, and tested to compile under Mono. Below is a partial list of projects, GitHub contains a more complete view of work.</p>
+	<p>Most of the work I release is written in C#, and tested to compile under Mono. Below is a partial list of projects, <a href="https://github.com/pingfu?tab=repositories" target="_blank">GitHub</a> contains a more complete view of work.</p>
 
 
 	<h2>IIS Remove Server Headers</h2>
