link to resolver page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: Home — Pingfu
 
 		<div id="tabs-2">
 
-			<h1>Dns Resolver</h1>
+			<h1>Dns Resolver &nbsp;<a href="/resolver.html" target="_blank"><img src="/img/pop-out-icon.png"></a></h1>
 			<p>You can use this free (rfc-compliant <a href="http://www.ietf.org/rfc/rfc1033.txt">rfc1033</a>, <a href="http://www.ietf.org/rfc/rfc1034.txt">rfc1034</a>, <a href="http://www.ietf.org/rfc/rfc1035.txt">rfc1035</a>) tool to perform dns queries using either our name servers, or those of your choosing. It supports common query types such as A, NS, CNAME, SOA, PTR, MX, TXT, RP, AXFR, AAAA, ANY, and more in addition to full support for IPv6.</p>
 
 			<div class="formFields">
@@ -81,6 +81,7 @@ title: Home — Pingfu
 					<option value="37">CERT</option>
 					<option value="43">DS</option>
 					<option value="44">SSHFP</option>
+					<option value="99">SPF</option>
 					<option value="252">AXFR</option>
 					<option value="251">IXFR</option>
 					<option value="0">NULL</option>
