--- a/resolver.html
+++ b/resolver.html
@@ -16,7 +16,7 @@ title: Home — Pingfu
 
 		<div id="tabs-2">
 
-			<h1>Dns Resolver &nbsp;<a href="/resolver.html" target="_blank"><img src="/img/pop-out-icon.png"></a></h1>
+			<h1>Dns Resolver</h1>
 			<p>You can use this free (rfc-compliant <a href="http://www.ietf.org/rfc/rfc1033.txt">rfc1033</a>, <a href="http://www.ietf.org/rfc/rfc1034.txt">rfc1034</a>, <a href="http://www.ietf.org/rfc/rfc1035.txt">rfc1035</a>) tool to perform dns queries using either our name servers, or those of your choosing. It supports common query types such as A, NS, CNAME, SOA, PTR, MX, TXT, RP, AXFR, AAAA, ANY, and more in addition to full support for IPv6.</p>
 
 			<div class="formFields">
