removed .html extension

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home — Pingfu
 
 <section class="boxed large">
 
-	<div id="popout"><a href="/resolver.html" target="_blank"><img alt="popout" src="/img/pop-out-icon.png"></a></div>
+	<div id="popout"><a href="/resolver" target="_blank"><img alt="popout" src="/img/pop-out-icon.png"></a></div>
 
 	<div id="tabs">
 
