amended button text

--- a/resolver.html
+++ b/resolver.html
@@ -100,7 +100,7 @@ title: Home — Pingfu
 			<p>Pseudo-random secure password generator. Generates passwords of varying length and character compositions.</p>
 
 			<div>
-				<button id="loadPasswords" type="button">Load Passwords</button>
+				<button id="loadPasswords" type="button">Generate New Passwords</button>
 			</div>
 
 			<div class="loadingImage"><img src="/img/ajax-loader.gif" /></div>
