minor text adjustment

--- a/resolver.html
+++ b/resolver.html
@@ -119,7 +119,7 @@ title: Home — Pingfu
 		<div id="tabs-9">
 
 			<h1>HTTP Headers</h1>
-			<p>You are coming to us from: <span class="whoami"></span>. Here are the http headers your browser just sent out:</p>
+			<p>You are coming to us from: <strong><span class="whoami"></span></strong>. Here are the http headers your browser sent out:</p>
 
 			<p id="whoamiJsonDump"></p>
 
