--- a/about.html
+++ b/about.html
@@ -10,35 +10,33 @@ breadcrumb: About Pingfu
 
 	<h1>{{ page.breadcrumb }}</h1>
 
-	<p>As a freelancer, Pingfu is a mash-up between work and play. I write, publish code, and a few other things here too. I'm based in Wales, UK and am available for hire. You can also find me on <a href="http://www.linkedin.com/profile/view?id=67596050" target="_blank">Linkedin</a>.</p>
+	<p>Pingfu is a mash-up between my work and play. I write, publish code, and a few other things here too. I'm currently based in <a href="http://maps.google.co.uk/maps?q=Cardiff">Cardiff</a> and available for hire. You can also find me on <a href="http://www.linkedin.com/profile/view?id=67596050" target="_blank">Linkedin</a>.</p>
 
-	<h2>Areas I work in</h2>
+	<h2>I can help with</h2>
 
 	<ul>
-		<li>Web technologies. Backend development and data storage to Javascript and HTML5 through to TLS and wire protocols, the whole stack.</li>
-		<li>PKCS implementation and validation.</li>
-		<li>Enterprise architectures upto IL3 in physical or cloud deployment (AWS, Azure and Rackspace).</li>
-		<li>Enterprise grade networking and storage.</li>
+		<li>Web technologies. Backend CRM or API development and data storage, to Javascript, RWD and HTML5 through to TLS and wire protocols, the whole stack.</li>
+		<li>Enterprise architectures and infrastructure stacks upto IL3 in physical or cloud deployments (AWS, Azure and Rackspace).</li>
+		<li>PKCS and PKI testing / implementation / validation.</li>
 		<li>Security policy, assurance and accreditation. (ISO27001 &amp; PCI)</li>
 		<li>Security incident detection, response, handling and recovery.</li>
 		<li>Code review and analysis (C#), performance optimisation, and penetration testing.</li>
-		<li>Voice and VoIP (SIP &amp; IAX).</li>
+		<li>Voice and VoIP (SIP &amp; IAX / Asterisk).</li>
 		<li>Technical document writing.</li>
 	</ul>
 
 	<h2>Freelance</h2>
 
-	<p>Recently I've worked with</p>
+	<p>Recently I've been working with</p>
 
 	<ul>
-		<!--<li><a target="_blank" href="http://www.cassidian.com/web/guest/cybersecurity">Cassidian</a>, a division of EADS</li>-->
 		<li><a target="_blank" href="http://www.generaldynamics.uk.com/">General Dynamics</a> — on a protocol implementation of IODEF and RID RFCs</li>
-		<li><a target="_blank" href="http://www.westgatecyber.com/">WestGate Cyber Security</a> — Technical consultant</li>
+		<li><a target="_blank" href="http://www.westgatecyber.com/">WestGate Cyber Security</a> — as a technical consultant</li>
 	</ul>
 
 	<h2>Previously</h2>
 
-	<p>I've been lucky to lead infrastructure and security architecture for some great projects with <a target="_blank" href="http://www.sequence.co.uk/">Sequence</a> over the last few years.</p>
+	<p>I've been lucky to lead infrastructure and security architecture for <a target="_blank" href="http://www.sequence.co.uk/">Sequence</a> over the last few years.</p>
 
 	<h2>CV</h2>
 
