--- a/tools.html
+++ b/tools.html
@@ -119,7 +119,7 @@ breadcrumb: Tools we've built
 			<p>
 				<a target="_blank" href="https://developers.google.com/web/starter-kit/"><strong>Google Web Starter Kit (WSK)</strong></a>
 				<br>
-				Complimenting Google's <a href="https://developers.google.com/web/fundamentals/" target="_blank">Web Fundamentals</a> project and inspired by <a href="http://html5boilerplate.com/mobile/" target="_blank">Mobile HTML5 Boilerplate</a>, WSK provides Google opinionated building blocks for constructing best practice aligned multi-screen applications.
+				Complementing Google's <a href="https://developers.google.com/web/fundamentals/" target="_blank">Web Fundamentals</a> project and inspired by <a href="http://html5boilerplate.com/mobile/" target="_blank">Mobile HTML5 Boilerplate</a>, WSK provides Google opinionated building blocks for constructing best practice aligned multi-screen applications.
 			</p>
 		</li>
 	</ul>
