--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ title: Home — Pingfu
 
 			<ul class="posts">
 			{% for post in site.posts %}
-				<li>{{ post.date | date_to_string }} — <a href="#{{ post.title }}">{{ post.title }}</a></li>
+				<li>{{ post.date | date_to_string }} — <a href="{{ post.url }}">{{ post.title }}</a></li>
 			{% endfor %}
 			</ul>
 
