--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Home — Pingfu
 				<div class="column">
 					<h2>Tools</h2>
 					<p>A collection of links to a few home grown tools, and some interesting work from the wider open-source world too.</p>
-					<p><a href="/blog">More ›</a></p>
+					<p><a href="/tools">More ›</a></p>
 				</div>
 			</div>
 
