--- a/tools.html
+++ b/tools.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Tools — Pingfu
-breadcrumb: Tools we've built
+breadcrumb: Tools I've built
 ---
 
 
@@ -30,7 +30,7 @@ breadcrumb: Tools we've built
 
 <section class="boxed">
 
-	<h1>Tools we like</h1>
+	<h1>Tools I like</h1>
 
 	<p>A few of the less well known, but exceptionally high quality tools I've had the pleasure of discovering.</p>
 
