--- a/about.html
+++ b/about.html
@@ -10,33 +10,38 @@ breadcrumb: About Pingfu
 
 	<h1>{{ page.breadcrumb }}</h1>
 
-	<p>Pingfu is a mash-up between my work and play. I write, publish code, and a few other things here too. I'm currently based in <a href="http://maps.google.co.uk/maps?q=Cardiff">Cardiff</a> and available for hire. You can also find me on <a href="http://www.linkedin.com/profile/view?id=67596050" target="_blank">Linkedin</a>.</p>
+	<p>Pingfu is a mash-up between my work and play. I write, publish code, and a few other things here too.</p>
+	<p>I'm currently based in <a href="http://maps.google.co.uk/maps?q=Cardiff">Cardiff</a> and <strike>available for hire</strike>. You can also find me on <a href="http://www.linkedin.com/profile/view?id=67596050" target="_blank">Linkedin</a>.</p>
 
 	<h2>I can help with</h2>
 
 	<ul>
+		<li>Enterprise and n-tier or SOA architectures, infrastructure stacks, security accreditation and compliance upto IL3, bare-metal or cloud (AWS, Azure, Rackspace).</li>
 		<li>Web technologies. Backend CRM or API development and data storage, to Javascript, RWD and HTML5 through to TLS and wire protocols, the whole stack.</li>
-		<li>Enterprise architectures and infrastructure stacks upto IL3 in physical or cloud deployments (AWS, Azure and Rackspace).</li>
-		<li>PKCS and PKI testing / implementation / validation.</li>
+		<li>Applied cryptography, secure password storage, ECDHE, PKCS and PKI, trust frameworks, real-world testing / implementation / validation.</li>
 		<li>Security policy, assurance and accreditation. (ISO27001 &amp; PCI)</li>
 		<li>Security incident detection, response, handling and recovery.</li>
 		<li>Code review and analysis (C#), performance optimisation, and penetration testing.</li>
 		<li>Voice and VoIP (SIP &amp; IAX / Asterisk).</li>
 		<li>Technical document writing.</li>
+		<li>Devops and sysops culture.</li>
 	</ul>
 
-	<h2>Freelance</h2>
-
+	<h2>Present</h2>
 	<p>Recently I've been working with</p>
 
 	<ul>
-		<li><a target="_blank" href="http://www.generaldynamics.uk.com/">General Dynamics</a> — on a protocol implementation of IODEF and RID RFCs</li>
 		<li><a target="_blank" href="http://www.westgatecyber.com/">WestGate Cyber Security</a> — as a technical consultant</li>
 	</ul>
 
 	<h2>Previously</h2>
+	<p>I've been lucky to work with</p>
 
-	<p>I've been lucky to lead infrastructure and security architecture for <a target="_blank" href="http://www.sequence.co.uk/">Sequence</a> over the last few years.</p>
+	<ul>
+		<li><a target="_blank" href="http://www.generaldynamics.uk.com/">General Dynamics</a> — under the office of the CTO on a protocol implementation of <a target="_blank" href="https://tools.ietf.org/html/rfc5070">IODEF</a> and <a target="_blank" href="https://tools.ietf.org/html/rfc6545">RID</a> RFCs in partnership with <a target="_blank" href="http://www.emc.com/">EMC</a></li>
+		<li><a target="_blank" href="http://www.sequence.co.uk/">Sequence</a> — as infrastructure and security architecture lead</li>
+		<li><a target="_blank" href="http://www.southwales.ac.uk/">University of South Wales</a> — as an MSc Computer Systems Security student</li>
+	</ul>
 
 	<h2>CV</h2>
 
