--- a/index.html
+++ b/index.html
@@ -227,8 +227,13 @@ title: Home — Pingfu
     /* initalise tabs */
 	$(document).ready(function() {
 		if ($(this).width()<640) {
+			$("#tabs-2").remove();
 			$("#menu-tab-2").remove();
+			
+			$("#tabs-3").remove();
 			$("#menu-tab-3").remove();
+			
+			$("#tabs-9").remove();
 			$("#menu-tab-9").remove();
 		}
 		else
