--- a/open-source.html
+++ b/open-source.html
@@ -38,7 +38,7 @@ breadcrumb: Open Source Projects
 
 
 	<h2>IRC Bot Skeleton</h2>
-	<p>An skeleton project for an IRC client. Build around the excellent <a href="http://thresher.sourceforge.net/">Sharkbite.Thresher.dll</a> library.</p>
+	<p>An skeleton project for an IRC client. Built on top of the excellent <a href="http://thresher.sourceforge.net/">Sharkbite.Thresher.dll</a> library.</p>
 	<p><a target="_blank" href="https://github.com/pingfu/ircbot-skeleton">GitHub ›</a>
 
 </section>
