--- a/iis-remove-server-headers.html
+++ b/iis-remove-server-headers.html
@@ -29,11 +29,7 @@ breadcrumb: IIS Remove Server Headers
 
 	<h2>Installation to the GAC</h2>
 
-	<p>Deploy the library to the Global Assembly Cache (GAC) using gacutil.exe. Once the library is installed to the GAC, other copies can be removed from the server.</p>
-
-```
-gacutil.exe /i Pingfu.RemoveServerHeaderModule.dll
-```
+	<p>Deploy the library to the Global Assembly Cache (GAC) using gacutil.exe. Once the library is installed to the GAC, other copies can be removed from the server. `gacutil.exe /i Pingfu.RemoveServerHeaderModule.dll`</p>
 
 	<h2>Configure IIS to use the module</h2>
 
