--- a/iis-remove-server-headers.html
+++ b/iis-remove-server-headers.html
@@ -29,7 +29,9 @@ breadcrumb: IIS Remove Server Headers
 
 	<h2>Installation to the GAC</h2>
 
-	<p>Deploy the library to the Global Assembly Cache (GAC) using gacutil.exe. Once the library is installed to the GAC, other copies can be removed from the server. `gacutil.exe /i Pingfu.RemoveServerHeaderModule.dll`</p>
+	<p>Deploy the library to the Global Assembly Cache (GAC) using gacutil.exe. Once the library is installed to the GAC, other copies can be removed from the server.</p>
+	
+	<code>gacutil.exe /i Pingfu.RemoveServerHeaderModule.dll</code>
 
 	<h2>Configure IIS to use the module</h2>
 
