--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Home — Pingfu
 		<ul>
 			<li><a class="show-hero" id="menu-tab-1" href="#tabs-1">Welcome</a></li>
 			<li><a class="hide-hero" id="menu-tab-2" href="#tabs-2">Dns Resolver</a></li>
-			<li><a class="hide-hero" id="menu-tab-3" href="#tabs-3">Secure Passwords</a></li>
+			<li><a class="hide-hero" id="menu-tab-3" href="#tabs-3">Complex Passwords</a></li>
 			<li><a class="hide-hero userip" id="menu-tab-9" href="#tabs-9"></a></li>
 		</ul>
 
@@ -154,11 +154,11 @@ title: Home — Pingfu
 
 		<div id="tabs-3">
 
-			<h1>Secure Passwords</h1>
-			<p>Pseudo-random secure password generator. Generates passwords of varying length and character compositions.</p>
+			<h1>Complex Passwords</h1>
+			<p>Generate complex passwords of varying length and character compositions.</p>
 
 			<div>
-				<button id="loadPasswords" type="button">Generate New Passwords</button>
+				<button id="loadPasswords" type="button">Generate</button>
 			</div>
 
 			<div class="loadingImage"><img src="/img/ajax-loader.gif" /></div>
