--- a/open-source.html
+++ b/open-source.html
@@ -12,20 +12,26 @@ breadcrumb: Open Source Projects
 	<p>Most of the work I release is written in C#, and tested to compile under Mono. Below is a partial list of projects, <a href="https://github.com/pingfu?tab=repositories" target="_blank">GitHub</a> contains a more complete view of work.</p>
 
 
-	<h2>IIS Remove Server Headers</h2>
+	<h2>IIS Module to remove unwanted http headers</h2>
 	<p>A module for IIS which removes unwanted HTTP headers from a server response.</p>
 	<p><a href="/iis-remove-server-headers">Read More ›</a>
 
 
-	<h2>Security Hardening Web.config</h2>
+	<h2>A simple guide to hardening Web.config</h2>
 	<p>A few simple steps to help harden web.config in production deployments..</p>
 	<p><a target="_blank" href="https://github.com/pingfu/notes/blob/master/Security%20-%20IIS%20-%20Hardening%20the%20web.config.md">GitHub ›</a>
 
 
-	<h2>Bitcoin Block Chain Parser</h2>
+	<h2>Bitcoin block chain parser</h2>
 	<p>BlockChainSharp is a block chain parser library written in C# for Bitcoin. It eats block chain files, in the format of blkxxxx.dat, and digests the data into iterable BlockChainReader objects.</p>
 	<p><a target="_blank" href="https://github.com/pingfu/blockchainsharp">GitHub ›</a>
 
+	
+	<h2>SimpleAES</h2>
+	<p>An extremely simple (non-AEAD) helper app to work with AES encrypted data. Used amongst other things as a proof-of-concept to decrypt DRM content referenced in m3u8 playlists.</p>
+	<p><a target="_blank" href="https://gist.github.com/marcbarry/96470e5424bfa2ffd193">SimpleAES.cs</a></p>
+	
+	
 	<!--
 	<h2>Fluency</h2>
 	<p>Fluency is an internationalisation (i18n) and localisation (l10n) library. Build Fluency into your project and use it to translate your application into different languages. An alternative to resx.</p>
