--- a/tools.html
+++ b/tools.html
@@ -18,7 +18,7 @@ breadcrumb: Tools I've built
 			<p>
 				<a target="_blank" href="http://disposable.pingfu.net/"><strong>disposable.pingfu.net</strong></a>
 				<br>
-				Disposable email, create a short lived throw-away email address - a little help to circumvent spammers and pointless signups.
+				Disposable email, create a short lived throw-away email address - a little help to circumvent spammers and unnecessary signups.
 			</p>
 		</li>
 	</ul>
