--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Home — Pingfu
 		<ul>
 			<li><a class="show-hero" id="menu-tab-1" href="#tabs-1">Welcome</a></li>
 			<li><a class="hide-hero" id="menu-tab-2" href="#tabs-2">Dns Resolver</a></li>
-			<li><a class="hide-hero" id="menu-tab-3" href="#tabs-3">Complex Passwords</a></li>
+			<li><a class="hide-hero" id="menu-tab-3" href="#tabs-3">Generate Passwords</a></li>
 			<li><a class="hide-hero userip" id="menu-tab-9" href="#tabs-9"></a></li>
 		</ul>
 
