--- a/open-source.html
+++ b/open-source.html
@@ -28,7 +28,7 @@ breadcrumb: Open Source Projects
 
 	
 	<h2>SimpleAES</h2>
-	<p>An extremely simple (non-AEAD) helper app to work with AES encrypted data. Used amongst other things as a proof-of-concept to decrypt DRM content referenced in m3u8 playlists.</p>
+	<p>An extremely simple (non-AEAD) helper app to work with AES encrypted data. Used among other things as a proof-of-concept to decrypt DRM protected content referenced in m3u8 playlists.</p>
 	<p><a target="_blank" href="https://gist.github.com/marcbarry/96470e5424bfa2ffd193">SimpleAES.cs</a></p>
 	
 	
