--- a/about.html
+++ b/about.html
@@ -6,45 +6,57 @@ breadcrumb: About
 
 <section class="boxed">
 
-	<div class="breadcrumb"><a href="/">Pingfu</a> <span class="divider">›</span> {{ page.breadcrumb }}</div>
+	<h1 id="about-me" class="text-align-center">
+		Hi, I'm <a href="http://www.linkedin.com/profile/view?id=67596050" target="_blank">Marc</a>, a freelance C# developer, infrastructure specialist and computer security enthusiast 
+		based in <a href="http://maps.google.co.uk/maps?q=Wales">Wales, UK</a>.<br /><strike>I'm available for hire</strike>.
+	</h1>
 
-	<h1>{{ page.breadcrumb }}</h1>
+	<hr />
 
-	<p>Pingfu is a mash-up between my work and play. I write, publish code, and a few other things here too.</p>
-	<p>I'm currently based in <a href="http://maps.google.co.uk/maps?q=Cardiff">Cardiff</a> and <strike>available for hire</strike>. You can also find me on <a href="http://www.linkedin.com/profile/view?id=67596050" target="_blank">Linkedin</a>.</p>
-
+	<!--
+	<p>Pingfu is a mash-up between work and play. I write, publish code, and a few other things here too. You can find me on Linkedin.</p>
+	-->
+	
 	<h2>I can help with</h2>
-
+	<br />
+	
 	<ul>
-		<li>Enterprise and n-tier or SOA architectures, infrastructure stacks, security accreditation and compliance upto IL3, bare-metal or cloud (AWS, Azure, Rackspace).</li>
-		<li>Web technologies. Backend CRM or API development and data storage, to Javascript, RWD and HTML5 through to TLS and wire protocols, the whole stack.</li>
+		<li>C# software development, code review, performance optimisation and penetration testing.</li>
+		<li>Enterprise and n-tier or SOA architectures, infrastructure stacks, security accreditation and compliance upto and including IL3.</li>
 		<li>Applied cryptography, secure password storage, ECDHE, PKCS and PKI, trust frameworks, real-world testing / implementation / validation.</li>
-		<li>Security policy, assurance and accreditation. (ISO27001 &amp; PCI)</li>
-		<li>Security incident detection, response, handling and recovery.</li>
-		<li>Code review and analysis (C#), performance optimisation, and penetration testing.</li>
-		<li>Voice and VoIP (SIP &amp; IAX / Asterisk).</li>
+		<li>Security incident detection, response, handling and recovery, policy, assurance and accreditation. (ISO27001 &amp; PCI)</li>
+		<li>Backend systems, data storage strategies, horizontally scaled infrastructure build, configure and deploy on bare-metal and cloud (AWS, Azure, Rackspace).</li>
+		<li>Modern front end technologies like javascript, responsive-web-design and HTML5.</li>
+		<li>Voice over IP system installation and debugging (SIP &amp; IAX / Asterisk).</li>
+		<li>Devops and sysops culture and tooling.</li>
 		<li>Technical document writing.</li>
-		<li>Devops and sysops culture.</li>
 	</ul>
 
-	<h2>Present</h2>
-	<p>Recently I've been working with</p>
-
+	
+	
+	<h2>Experience</h2>
+	
+	<p>Currently working with</p>
 	<ul>
-		<li><a target="_blank" href="http://www.westgatecyber.com/">WestGate Cyber Security</a> — as a technical consultant</li>
+		<li>British tech start-up <a target="_blank" href="http://www.westgatecyber.com/">Westgate Cyber Security</a> — as CTO.</li>
 	</ul>
 
-	<h2>Previously</h2>
-	<p>I've been lucky to work with</p>
-
+	<p>Recently worked with</p>
 	<ul>
-		<li><a target="_blank" href="http://www.generaldynamics.uk.com/">General Dynamics</a> — under the office of the CTO on a protocol implementation of <a target="_blank" href="https://tools.ietf.org/html/rfc5070">IODEF</a> and <a target="_blank" href="https://tools.ietf.org/html/rfc6545">RID</a> RFCs in partnership with <a target="_blank" href="http://www.emc.com/">EMC</a></li>
-		<li><a target="_blank" href="http://www.sequence.co.uk/">Sequence</a> — as infrastructure and security architecture lead</li>
-		<li><a target="_blank" href="http://www.southwales.ac.uk/">University of South Wales</a> — as an MSc Computer Systems Security student</li>
+		<li>Aerospace and defense contractor <a target="_blank" href="http://www.generaldynamics.uk.com/">General Dynamics</a> — under the office of the CTO leading a protocol implementation of <a target="_blank" href="https://tools.ietf.org/html/rfc5070">IODEF</a> and <a target="_blank" href="https://tools.ietf.org/html/rfc6545">RID</a> RFCs in partnership with <a target="_blank" href="http://www.emc.com/">EMC</a>.</li>
+		<li>Digital agency <a target="_blank" href="http://www.sequence.co.uk/">Sequence</a> — as an infrastructure architect and security lead.</li>
 	</ul>
+	
+	
+	
+	<h2>Location</h2>
+	<p>I work out of Portland House in Cardiff Bay.</p>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2485.599708265375!2d-3.166186799999997!3d51.465505500000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486e03363fb9d07b%3A0x7b16a550ddd8ea00!2sPortland+House!5e0!3m2!1sen!2suk!4v1437068574575" frameborder="0" style="border:0; width: 100%; height: 460px;"></iframe>
 
+	<h2>Education</h2>
+	<p><a target="_blank" href="http://www.southwales.ac.uk/">University of South Wales</a> — MSc in Computer Systems Security.</p>
+	
 	<h2>CV</h2>
-
 	<p>Available on request.</p>
 
 </section>
