--- a/open-source/iis-remove-server-headers.html
+++ b/open-source/iis-remove-server-headers.html
@@ -6,7 +6,7 @@ breadcrumb: IIS Remove Server Headers
 
 <section class="boxed">
 
-	<div class="breadcrumb"><a href="/">Pingfu</a> <span class="divider">›</span> <a href="/open-source">Open Source</a> <span class="divider">›</span> {{ page.breadcrumb }}</div>
+	<div class="breadcrumb"> <span class="divider">›</span> <a href="/open-source">Open Source</a> <span class="divider">›</span> {{ page.breadcrumb }}</div>
 
 	<h1>{{ page.breadcrumb }}</h1>
 
