--- a/open-source.html
+++ b/open-source.html
@@ -6,17 +6,12 @@ breadcrumb: Open Source
 
 <section class="boxed">
 
-	<h1>Open source - Home grown</h1>
+	<h1>Open source</h1>
 	
-	<p>A collection of links to a few home grown tools, and some interesting projects from the wider open-source community.</p>
+	<p>A collection of links to a few home grown tools.</p>
 
 	<ul class="tools">
-		<!--
-		<li>
-			<h2><a target="_blank" href="http://disposable.pingfu.net/">Disposable email</a></h2>
-			<p>A little help to circumventing spammers and unnecessary signups, create short lived throw-away email addresses.</p>
-		</li>
-		-->
+	
 		<li>
 			<h2><a target="_blank" href="https://github.com/pingfu/iis-remove-server-headers">pingfu/iis-remove-server-headers IIS Module</a></h2>
 			<p>Install to the GAC, removes unwanted http headers from IIS responses.</p>
